# practicum

./: LICENSE  README.md  manage.py  models.py  pyproject.toml  requirements.txt  terms-of-reference.md
business/: signals.py
electronic_store/: admin.py  apps.py  asgi.py  models.py  settings.py  urls.py  wsgi.py
electronic_store/business/: apps.py  filters.py  permissions.py  serializers.py  signals.py  urls.py  views.py
electronic_store/management/commands/: load_fixtures.py  register_test_users.py
electronic_store/migrations/: 0001_initial.py
