[project]
name = "practicum"
version = "1.0.0"
description = "Practicum for Light IT Global"
authors = [
    {name = "Serhii Chyrva",email = "chirva2428@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "django-unfold (>=0.60.0,<0.61.0)",
    "django-modeladmin-reorder (>=0.3.1,<0.4.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "django-filter (>=25.1,<26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
